# av_analyzer

./: .gitignore  Dockerfile  Dockerfile-frontend  Makefile  README.md  docker-compose.yaml  index.html  package.json  pyproject.toml  tailwind.config.js
frontend/: api_types.ts  app.tsx  index.css  main.tsx
frontend/components/: FileUpload.tsx  JobsList.tsx  TranscriptionResults.tsx
frontend/types/: api.ts
kubernetes/: api.yaml  namespace.yaml  postgres.yaml  secrets.yaml
sample files/: hiking.m4a  pickle-ball.m4a  transformers.m4a
src/: database.py  main.py  models.py  schemas.py
src/services/: file_service.py  llm_service.py  whisper_service.py
